--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # for code
-requests==2.18.4
-more-itertools==4.1.0
-pandas==0.22.0
-numpy==1.14.1
-retrying==1.3.3
+requests
+more-itertools
+pandas
+numpy
+retrying
 
 # for tests
-pytest==3.4.0
-requests-mock==1.4.0
+pytest
+requests-mock
